tests/positive/constant_access_deref_write.safe
-- Test: constant_access_deref_write
-- Description: Constant access object does not imply deep immutability.
--   The access value itself is constant, but writes through `.all`
--   still target the designated object rather than the constant object.
-- Expected: ACCEPT

package constant_access_deref_write

   type payload is record
      value : integer;


   type payload_ptr is access payload;

   function mutate_through_constant_access
      Ptr : constant payload_ptr = new ((value = 1) as payload);

      Ptr.value = 2;

