tests/negative/neg_try_send_reassign_without_check.safe
-- Test: neg_try_send_reassign_without_check
-- Description: Access-typed channel elements are rejected before try_send reassignment checks run.
-- Expected: REJECT source_frontend_error

package neg_try_send_reassign_without_check

   type payload is record
      value : integer;


   type payload_ptr is access payload;

   channel data_ch : payload_ptr capacity 1;

   function run
      Source  : payload_ptr = new ((value = 1) as payload);
      success : boolean = false;

      try_send data_ch, Source, success;
      Source = new ((value = 2) as payload);



